--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <p class="main__footer--name">«Здесь приступлено уже к устройствуm гидроэлектрических установок с тем,
                     чтобы использовать силу падения речных вод для выработки электрической энергии
                     и при посредстве этой последней мелиорировать болотистые пространства и превратить их в культурную
-                    землю»</p>
+                    землю» Из Плана ГОЭЛРО</p>
             </div>
         </div>
     </div>
