--- a/year-1930.html
+++ b/year-1930.html
@@ -73,7 +73,10 @@
         <div class="header__wrapper content-row">
             <a href="#" class="header__film ">
                 <div class="header__film--box">
-                    <img src="img/home/video.jpg" alt="video" class="content-image">
+                    <video class="header__film--inner" autoplay="autoplay" muted loop="loop" playsinline
+                           preload="auto"
+                           poster="img/home/video.jpg" src="https://logo-outsourcing.github.io/Hydro/video/saver.mp4">
+                    </video>
                     <div class="header__info">
                         <img src="img/home/play.png" alt="Play" class="header__play">
                         <span class="header__subtitle">ВИДЕО</span>
@@ -87,9 +90,9 @@
                 </div>
                 <a href="#" class="header__film--close"><img src="img/test/close-film.svg" alt="close"></a>
             </div>
-            <video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster2.png"
-                   class="header__video" src="https://logo-outsourcing.github.io/Hydro/video/video3.mp4">
-            </video>
+            <!--<video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster2.png"-->
+                   <!--class="header__video" src="https://logo-outsourcing.github.io/Hydro/video/video3.mp4">-->
+            <!--</video>-->
         </div>
     </div>
     <div class="header__element">
