--- a/year-1940.html
+++ b/year-1940.html
@@ -327,7 +327,7 @@
             </div>
             <div class="forty__exploitation--text wow fadeInRight content-row">
                 <h3 class="content-data forty__data forty__box--data">1950</h3>
-                <p class="content-wrap content-text forty__exploitation--info forty__height">1950 г., в Комсомольске-на-Амуре введена
+                <p class="content-wrap content-text forty__exploitation--info forty__height">В Комсомольске-на-Амуре введена
                     в
                     эксплуатацию Комсомольская ТЭЦ-1
                     мощностью 25 МВт</p>
