editing src video

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!--</div>-->
 <div id="preloader" class="preload ">
     <video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster2.png"
-           src="https://logo-outsourcing.github.io/Hydro/video/video7.mp4">
+           src="https://logo-outsourcing.github.io/RusHydro/video/video7.mp4">
     </video>
 </div>
 <header class="header" id="header">
@@ -114,7 +114,7 @@
         <div class="content-container">
             <video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster.jpg"
                    class="header__video--mobile">
-                <source src="https://logo-outsourcing.github.io/RusHydro/video/video.mp4"
+                <source src="https://logo-outsourcing.github.io/Hydro/video/video.mp4"
                         type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
             </video>
             <h1 class="header__title ">История энергетики России</h1>
@@ -816,14 +816,12 @@
                                 </li>
                                 <li class="interactive__info--item" id="description-7-option-3">
                                     • <span class="interactive__info--color"> Дзауджикауская ГЭС  </span>была введена в
-                                    эксплуатацию в
-                                    Северной Осетии уже после войны – в 1948 году. А Красное знамя Наркомата
+                                    эксплуатацию в Северной Осетии уже после войны – в 1948 году. А Красное знамя Наркомата
                                     электростанций было передано на вечное хранение Рыбинской ГЭС, которая начала
                                     работать в ноябре 1941 года и внесла большой вклад в защиту Москвы. Из-за перебоев с
                                     топливом многие крупные электростанции останавливали свою работу. Рыбинской ГЭС
                                     удалось обеспечить бесперебойное энергоснабжение столицы на протяжении всей войны,
                                     за что она и получила знамя.
-
                                 </li>
                                 <li class="interactive__info--item" id="description-7-option-4">
                                     • <span class="interactive__info--color">	Угличская ГЭС  </span>была введена в
