--- a/year-1940.html
+++ b/year-1940.html
@@ -96,7 +96,7 @@
         <div class="content-container">
             <video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster.jpg"
                    class="header__video--mobile">
-                <source src="https://logo-outsourcing.github.io/RusHydro/video/video.mp4"
+                <source src="https://logo-outsourcing.github.io/Hydro/video/video.mp4"
                         type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
             </video>
             <h1 class="header__title wow slideInUp">История энергетики России</h1>
