--- a/year-1930.html
+++ b/year-1930.html
@@ -74,14 +74,13 @@
             <a href="#" class="header__film ">
                 <div class="header__film--box">
                     <video class="header__film--inner" autoplay="autoplay" muted loop="loop" playsinline
-                           preload="auto"
-                           poster="img/home/video.jpg" src="https://logo-outsourcing.github.io/Hydro/video/saver.mp4">
-                    </video>
+                                     preload="auto"
+                                     poster="img/home/video.jpg" src="https://logo-outsourcing.github.io/Hydro/video/saver.mp4">
+                </video>
                     <div class="header__info">
                         <img src="img/home/play.png" alt="Play" class="header__play">
-                        <span class="header__subtitle">ВИДЕО</span>
-                        <p class="header__name"> Фильм: Федр Яковлев, 2013</p>
                     </div>
+                    <img src="img/home/poster5.png" class="header__poster">
                 </div>
             </a>
             <div class="header__film--open">
@@ -108,8 +107,6 @@
                     <img src="img/home/video.jpg" alt="video" class="header__image">
                     <div class="header__info">
                         <img src="img/home/play.png" alt="Play" class="header__play">
-                        <span class="header__subtitle">ВИДЕО</span>
-                        <p class="header__name"> Фильм: Федр Яковлев, 2013</p>
                     </div>
 
                 </a>
