--- a/year-1940.html
+++ b/year-1940.html
@@ -73,12 +73,14 @@
         <div class="header__wrapper content-row">
             <a href="#" class="header__film ">
                 <div class="header__film--box">
-                    <img src="img/home/video.jpg" alt="video" class="content-image">
+                    <video class="header__film--inner" autoplay="autoplay" muted loop="loop" playsinline
+                           preload="auto"
+                           poster="img/home/video.jpg" src="https://logo-outsourcing.github.io/Hydro/video/saver.mp4">
+                    </video>
                     <div class="header__info">
                         <img src="img/home/play.png" alt="Play" class="header__play">
-                        <span class="header__subtitle">ВИДЕО</span>
-                        <p class="header__name"> Фильм: Федр Яковлев, 2013</p>
                     </div>
+                    <img src="img/home/poster5.png" class="header__poster">
                 </div>
             </a>
             <div class="header__film--open">
@@ -87,9 +89,9 @@
                 </div>
                 <a href="#" class="header__film--close"><img src="img/test/close-film.svg" alt="close"></a>
             </div>
-            <video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster2.png"
-                   class="header__video" src="https://logo-outsourcing.github.io/Hydro/video/video3.mp4">
-            </video>
+            <!--<video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster2.png"-->
+                   <!--class="header__video" src="https://logo-outsourcing.github.io/Hydro/video/video3.mp4">-->
+            <!--</video>-->
         </div>
     </div>
     <div class="header__element">
@@ -105,8 +107,7 @@
                     <img src="img/home/video.jpg" alt="video" class="header__image">
                     <div class="header__info">
                         <img src="img/home/play.png" alt="Play" class="header__play">
-                        <span class="header__subtitle">ВИДЕО</span>
-                        <p class="header__name"> Фильм: Федр Яковлев, 2013</p>
+
                     </div>
 
                 </a>
