editing  page and color

--- a/year-1960.html
+++ b/year-1960.html
@@ -76,8 +76,6 @@
                     <img src="img/home/video.jpg" alt="video" class="content-image">
                     <div class="header__info">
                         <img src="img/home/play.png" alt="Play" class="header__play">
-                        <span class="header__subtitle">ВИДЕО</span>
-                        <p class="header__name"> Фильм: Федр Яковлев, 2013</p>
                     </div>
                 </div>
             </a>
@@ -87,9 +85,9 @@
                 </div>
                 <a href="#" class="header__film--close"><img src="img/test/close-film.svg" alt="close"></a>
             </div>
-            <video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster2.png"
-                   class="header__video" src="https://logo-outsourcing.github.io/Hydro/video/video3.mp4">
-            </video>
+            <!--<video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster2.png"-->
+                   <!--class="header__video" src="https://logo-outsourcing.github.io/Hydro/video/video3.mp4">-->
+            <!--</video>-->
         </div>
     </div>
     <div class="header__element">
@@ -105,8 +103,6 @@
                     <img src="img/home/video.jpg" alt="video" class="header__image">
                     <div class="header__info">
                         <img src="img/home/play.png" alt="Play" class="header__play">
-                        <span class="header__subtitle">ВИДЕО</span>
-                        <p class="header__name"> Фильм: Федр Яковлев, 2013</p>
                     </div>
 
                 </a>
@@ -208,7 +204,7 @@
                         Камчатская ТЭЦ-1 мощностью 204 МВт</p>
                 </div>
                 <div class="content-row sixty__mounting--row wow fadeInLeft">
-                    <h3 class="content-data sixty__data">1965</h3>
+                    <h3 class="content-data sixty__data">1966</h3>
                     <p class="sixty__paragraph content-text-next content-wrap">На юге Камчатки введена
                         в эксплуатацию Паужетская ГеоЭС
                         мощностью 12 МВт − первая
