--- a/year-1980.html
+++ b/year-1980.html
@@ -211,13 +211,13 @@
 
         </div>
         <div class="eighty__station wow fadeInLeft">
-            <p class="content-text eighty__station--text">1980-е гг., Нерюнгринская ГРЭС</p>
+            <p class="content-text eighty__station--text">1983 г., Нерюнгринская ГРЭС</p>
             <div class="eighty__station--wrap"></div>
             <a id="single_image12" href="img/eighty/station-big.jpg" class="zoom eighty__station--image">
                 <img src="img/home/loading.gif" data-src="img/eighty/station.png" alt="Нерюнгринская ГРЭС" class="content-image b-lazy"></a>
         </div>
         <div class="content-row eighty__building wow fadeInLeft">
-            <h2 class="content-data eighty__data">1984</h2>
+
             <div class="eighty__building--box">
                 <div class="eighty__building--wrap">
                     <a id="single_image13" href="img/eighty/building.png" class="zoom ">
@@ -228,8 +228,12 @@
                             Майнской ГЭС</p>
                     </div>
                 </div>
-                <p class="eighty__building--name">В Хакасии на реке Енисей введена в эксплуатацию
-                    Майнская ГЭС мощностью 321 МВт</p>
+                <div class="content-row eighty__building--text">
+                    <h2 class="content-data eighty__exploitation--data ">1984</h2>
+                    <p class="content-text content-wrap">В Хакасии на реке Енисей введена в эксплуатацию
+                        Майнская ГЭС мощностью 321 МВт</p>
+                </div>
+
             </div>
 
         </div>
