--- a/year-1990.html
+++ b/year-1990.html
@@ -172,6 +172,11 @@
 <section class="ninety">
     <div class="content-container">
         <h2 class="main__title wow fadeInLeft">1990-2000</h2>
+        <div class="wow fadeInLeft">
+            <p class="ninety__name">В декабре 1991 года после распада СССР начинается процесс разделения Единой
+                энергосистемы СССР по странам
+                акционирования электроэнергетики. В 1992 году создается РАО «ЕЭС России»</p>
+        </div>
         <div class="ninety__heading wow fadeInLeft">
             <a id="single_image10" href="img/ninety/Irganai.png" class="zoom">
                 <img src="img/home/loading.gif" data-src="img/ninety/Irganai.png" alt="Ирганайская ГЭС" class="b-lazy content-image"></a>
@@ -179,10 +184,11 @@
                 <p class="content-text-next content-text-white">1998 г., Ирганайская ГЭС</p>
             </div>
         </div>
-        <div class="wow fadeInLeft">
-            <p class="ninety__name">В декабре 1991 года после распада СССР начинается процесс разделения Единой
-                энергосистемы СССР по странам
-                акционирования электроэнергетики. В 1992 году создается РАО «ЕЭС России»</p>
+        <div class="content-row    ninety__text wow fadeInRight">
+            <h3 class="content-data ninety__data">1998</h3>
+            <p class="content-wrap content-text-next ninety__paragraph">В Дагестане введена
+                в эксплуатацию Ирганайская ГЭС мощностью
+                400 МВт</p>
         </div>
         <div class="content-row ninety__exploitation">
             <div class="ninety__exploitation--wrap wow fadeInLeft">
@@ -192,30 +198,23 @@
                     <p class="content-text-white content-text-next">1999 г., Зеленчукская ГЭС-ГАЭС</p>
                 </div>
             </div>
-            <div class="content-row ninety__exploitation--text wow fadeInRight">
-                <h3 class="content-data ninety__data">1998</h3>
-                <p class="content-wrap content-text-next ninety__paragraph">В Дагестане введена
-                    в эксплуатацию Ирга-
-                    найская ГЭС мощностью
-                    400 МВт</p>
-            </div>
-        </div>
-        <div class="content-row ninety__text">
-            <div class="content-row ninety__info wow fadeInLeft">
-                <h3 class="content-data ninety__data">1999</h3>
-                <p class="content-wrap content-text-next ninety__paragraph">В Карачаево-Черкесии введена
-                    Зеленчукская ГЭС-ГАЭС
-                    мощностью 300 МВт, на Камчатке
-                    − Верхне-Мутновская ГеоЭС
-                    мощностью 12 МВт</p>
-            </div>
-            <div class="content-row ninety__info wow fadeInLeft">
-                <h3 class="content-data ninety__data">2002</h3>
-                <p class="content-wrap content-text-next ninety__paragraph">В Кабардино-Балкарии
-                    введена в эксплуатацию
-                    Аушигерская ГЭС
-                    мощностью 60 МВт</p>
-            </div>
+           <div class="ninety__exploitation--text">
+               <div class="content-row ninety__info wow fadeInLeft">
+                   <h3 class="content-data ninety__data">1999</h3>
+                   <p class="content-wrap content-text-next ninety__paragraph">В Карачаево-Черкесии введена
+                       Зеленчукская ГЭС-ГАЭС
+                       мощностью 300 МВт, на Камчатке
+                       − Верхне-Мутновская ГеоЭС
+                       мощностью 12 МВт</p>
+               </div>
+               <div class="content-row ninety__info wow fadeInLeft">
+                   <h3 class="content-data ninety__data">2002</h3>
+                   <p class="content-wrap content-text-next ninety__paragraph">В Кабардино-Балкарии
+                       введена в эксплуатацию
+                       Аушигерская ГЭС
+                       мощностью 60 МВт</p>
+               </div>
+           </div>
         </div>
         <div class="ninety__station wow slideInUp">
             <a id="single_image12" href="img/ninety/station.png" class="zoom">
