--- a/year-2000.html
+++ b/year-2000.html
@@ -172,54 +172,69 @@
 <section class="thousand">
     <div class="content-container">
         <h2 class="main__title wow fadeInLeft">2000-2010</h2>
-        <p class="thousand__name wow fadeInLeft">26 декабря 2004 года в ходе реформы электроэнергетики создано ОАО «ГидроОГК», в
+        <p class="thousand__name wow fadeInLeft">26 декабря 2004 года в ходе реформы электроэнергетики создано ОАО
+            «ГидроОГК», в
             дальнейшем переименованное в ПАО «РусГидро».</p>
-        <div class="thousand__station wow slideInUp">
-            <a id="single_image10" href="img/thousand/station.png" class="zoom thousand__station--image">
-                <img src="img/home/loading.gif" data-src="img/thousand/station.png" alt="Гунибская ГЭС" class="b-lazy content-image"></a>
-            <div class="thousand__station--info">
-                <p class="content-text-white content-text-next">Гунибская ГЭС </p>
+        <div class="thousand__station content-row ">
+            <div class="thousand__station--wrap wow slideInUp">
+                <a id="single_image10" href="img/thousand/station.png" class="zoom thousand__station--image">
+                    <img src="img/home/loading.gif" data-src="img/thousand/station.png" alt="Гунибская ГЭС"
+                         class="b-lazy content-image"></a>
+                <div class="thousand__station--info">
+                    <p class="content-text-white content-text-next">Гунибская ГЭС </p>
+                </div>
             </div>
-        </div>
-        <div class="content-row thousand__hall">
-            <div class="thousand__hall--text">
-                <div class="content-row thousand__hall--block wow fadeInLeft">
+            <div class="thousand__station--text content-row  wow fadeInRight">
                     <h3 class="content-data thousand__data">2004</h3>
                     <p class="content-wrap content-text-next thousand__paragraph">В Дагестане введена
                         в эксплуатацию Гунибская
                         ГЭС мощностью 15 МВт</p>
-                </div>
+            </div>
+        </div>
+        <div class="content-row thousand__hall">
+            <div class="thousand__hall--text">
+
                 <div class="content-row thousand__hall--block thousand__hall--inner wow fadeInLeft">
                     <h3 class="content-data thousand__data">2006</h3>
                     <p class="content-wrap content-text-next thousand__paragraph">В Дагестане введена в эксплуатацию
                         Гельбахская
                         ГЭС мощностью 44 МВт,на Чукотке − Анадырская ГМТЭЦ мощностью 18,3 МВт</p>
                 </div>
+                <div class="content-row  thousand__hall--block wow fadeInLeft">
+                    <h3 class="content-data thousand__data thousand__row--data">2006 2008</h3>
+                    <p class="content-wrap content-text-next thousand__paragraph">В Дагестане введены
+                        в эксплуатацию пять
+                        ГЭС малой мощности:
+                        Агульская, Магинская,
+                        Амсарская, Аракульская
+                        и Шиназская</p>
+                </div>
                 <div class="thousand__exchange wow fadeInLeft">
                     <a id="single_image11" href="img/thousand/exchange-big.png" class="zoom">
-                        <img src="img/home/loading.gif" data-src="img/thousand/exchange.png" alt="Магинская МГЭС" class="b-lazy content-image"></a>
+                        <img src="img/home/loading.gif" data-src="img/thousand/exchange.png" alt="Магинская МГЭС"
+                             class="b-lazy content-image"></a>
                     <div class="thousand__exchange--info">
                         <p class="content-text-next content-text-white">2007 г., Магинская МГЭС</p>
                     </div>
                 </div>
+                <div class="content-row thousand__hall--block thousand__hall--last wow fadeInLeft">
+                    <h3 class="content-data thousand__data">2010</h3>
+                    <p class="content-wrap content-text-next thousand__paragraph">Ставрополье −
+                        Егорлыкская ГЭС-2
+
+                        мощностью 14,2 МВт</p>
+                </div>
             </div>
             <div class="thousand__hall--wrap wow fadeInLeft">
                 <a id="single_image12" href="img/thousand/hall.png" class="zoom ">
-                    <img src="img/home/loading.gif" data-src="img/thousand/hall.png" alt="Машинный зал Жигулевской ГЭС" class="b-lazy content-image"></a>
+                    <img src="img/home/loading.gif" data-src="img/thousand/hall.png" alt="Машинный зал Жигулевской ГЭС"
+                         class="b-lazy content-image"></a>
                 <div class="thousand__hall--info">
                     <p class="content-text-white content-text-next">Машинный зал Жигулевской ГЭС</p>
                 </div>
             </div>
         </div>
-        <div class="content-row thousand__row wow fadeInLeft">
-            <h3 class="content-data thousand__data thousand__row--data">2006 2008</h3>
-            <p class="content-wrap content-text-next thousand__paragraph">В Дагестане введены
-                в эксплуатацию пять
-                ГЭС малой мощности:
-                Агульская, Магинская,
-                Амсарская, Аракульская
-                и Шиназская</p>
-        </div>
+
         <div class="thousand__exploitation content-row">
             <div class="thousand__exploitation--wrap wow slideInUp">
                 <a id="single_image13" href="img/thousand/worker-big.jpg" class="zoom ">
@@ -234,7 +249,8 @@
                 <div class="thousand__machine wow fadeInRight">
                     <div class="thousand__machine--wrap">
                         <a id="single_image14" href="img/thousand/machine.png" class="zoom ">
-                            <img src="img/home/loading.gif" data-src="img/thousand/machine.png" alt="машинный зал Егорлыкской ГЭС-2" class="b-lazy content-image"></a>
+                            <img src="img/home/loading.gif" data-src="img/thousand/machine.png"
+                                 alt="машинный зал Егорлыкской ГЭС-2" class="b-lazy content-image"></a>
                         <div class="thousand__machine--info">
                             <p class="content-text-next content-text-white">2010 г., машинный зал Егорлыкской ГЭС-2</p>
                         </div>
@@ -251,7 +267,8 @@
         </div>
         <div class="thousand__main wow slideInUp">
             <a id="single_image15" href="img/thousand/main.png" class="zoom ">
-                <img src="img/home/loading.gif" data-src="img/thousand/main.png" alt="Зарамагская ГЭС" class="b-lazy content-image"></a>
+                <img src="img/home/loading.gif" data-src="img/thousand/main.png" alt="Зарамагская ГЭС"
+                     class="b-lazy content-image"></a>
             <div class="thousand__main--info">
                 <p class="content-text-white content-text-next">Головная Зарамагская ГЭС в республике
                     Северная Осетия – Алания</p>
@@ -268,7 +285,8 @@
         </div>
         <div class="thousand__box wow slideInUp">
             <a id="single_image16" href="img/thousand/point.png" class="zoom ">
-                <img src="img/home/loading.gif" data-src="img/thousand/point.png" alt="Кашхатау ГЭС" class="b-lazy content-image"></a>
+                <img src="img/home/loading.gif" data-src="img/thousand/point.png" alt="Кашхатау ГЭС"
+                     class="b-lazy content-image"></a>
             <div class="thousand__box--info">
                 <p class="content-text-next content-text-white">2010 г., Кашхатау ГЭС</p>
             </div>
