editing  page header and menu

--- a/index.html
+++ b/index.html
@@ -13,15 +13,6 @@
     <link href="img/home/favicon.png" rel="icon">
 </head>
 <body>
-<!--<div class="container-fluid">-->
-<!--<div class="sides-fluid left-side-fluid"></div>-->
-<!--<div class="sides-fluid right-side-fluid"></div>-->
-<!--<div class="circle"></div>-->
-
-<!--<div class="sides left-side"></div>-->
-<!--<div class="sides right-side"></div>-->
-<!--<h4 class="text-center">100 Лет плану ГОЭЛРО</h4>-->
-<!--</div>-->
 <div id="preloader" class="preload ">
     <video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster2.png"
            src="https://logo-outsourcing.github.io/RusHydro/video/video7.mp4">
@@ -66,7 +57,7 @@
                                class="header__navigation--link header__navigation--blue">1990-2003</a>
                         </li>
                         <li class="header__navigation--item">
-                            <a href="year-2000.html" class="header__navigation--link header__navigation--yellow">2003-2010</a>
+                            <a href="year-2000.html" class="header__navigation--link header__navigation--yellow">2004-2010</a>
                         </li>
                         <li class="header__navigation--item">
                             <a href="year-2010.html"
@@ -103,9 +94,6 @@
                 </div>
                 <a href="#" class="header__film--close"><img src="img/test/close-film.svg" alt="close"></a>
             </div>
-            <!--<video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster2.png"-->
-            <!--class="header__video" src="https://logo-outsourcing.github.io/Hydro/video/video3.mp4">-->
-            <!--</video>-->
         </div>
     </div>
     <div class="header__element">
@@ -121,9 +109,7 @@
                     <img src="img/home/video.jpg" alt="video" class="header__image">
                     <div class="header__info">
                         <img src="img/home/play.png" alt="Play" class="header__play">
-
                     </div>
-
                 </a>
                 <div class="header__film--small">
                     <div class="header__film--wrap">
@@ -237,7 +223,7 @@
                     Р. А. Ферман,
                     Н. Н. Вашков,
                     М. А. Смирнов
-                  <span class="main__signature"> | фотография предоставлена РИА Новости</span> </p>
+                    <span class="main__signature"> | фотография предоставлена РИА Новости</span></p>
                 <p class="content-text-next main__info wow fadeInLeft">24 сентября 1925 г.,
                     участники комиссии
                     по разработке плана
@@ -260,14 +246,16 @@
         <div class="main__item ">
             <div class="main__description wow fadeInLeft">
                 <p class="content-text">«В. И. Ленин у карты ГОЭЛРО. VIII Всероссийский съезд
-                    Советов. Декабрь 1920 г.» (художник Л. А. Шматько)  <span class="main__signature">| фотография предоставлена РИА Новости</span></p>
+                    Советов. Декабрь 1920 г.» (художник Л. А. Шматько) <span class="main__signature">| фотография предоставлена РИА Новости</span>
+                </p>
             </div>
             <div class="content-row main__wrapper">
                 <div class="main__box">
                     <a id="single_image12" href="img/home/lenin.png" class="zoom main__scene wow fadeInLeft">
                         <img src="img/home/loading.gif" data-src="img/home/lenin.png" alt="lenin"
                              class="b-lazy content-image"></a>
-                    <p class="content-text main__box--text wow fadeInLeft">План ГОЭЛРО предусматривал строительство 20 тепловых<br>
+                    <p class="content-text main__box--text wow fadeInLeft">План ГОЭЛРО предусматривал строительство 20
+                        тепловых<br>
                         и 10 гидроэлектростанций общей мощностью всего 1,75 млн кВт </p>
                     <p class="main__paragraph content-text wow fadeInLeft">К этому времени в Петрограде уже работает
                         «Изыскательская
@@ -283,7 +271,7 @@
                              class="b-lazy content-image"></a>
                     <p class="content-text main__plan wow fadeInLeft">1920 г., титульный лист
                         Плана электрификации
-                        РФСФР – ГОЭЛРО  <span class="main__signature">| фотография предоставлена РИА Новости</span></p>
+                        РФСФР – ГОЭЛРО <span class="main__signature">| фотография предоставлена РИА Новости</span></p>
                 </div>
             </div>
             <div class="main__footer wow fadeInLeft">
@@ -813,7 +801,8 @@
                                 </li>
                                 <li class="interactive__info--item" id="description-7-option-3">
                                     • <span class="interactive__info--color"> Дзауджикауская ГЭС  </span>была введена в
-                                    эксплуатацию в Северной Осетии уже после войны – в 1948 году. А Красное знамя Наркомата
+                                    эксплуатацию в Северной Осетии уже после войны – в 1948 году. А Красное знамя
+                                    Наркомата
                                     электростанций было передано на вечное хранение Рыбинской ГЭС, которая начала
                                     работать в ноябре 1941 года и внесла большой вклад в защиту Москвы. Из-за перебоев с
                                     топливом многие крупные электростанции останавливали свою работу. Рыбинской ГЭС
