--- a/year-1990.html
+++ b/year-1990.html
@@ -49,10 +49,10 @@
                         </li>
                         <li class="header__navigation--item">
                             <a href="year-1990.html"
-                               class="header__navigation--link header__navigation--blue">1990-2000</a>
+                               class="header__navigation--link header__navigation--blue">1990-2003</a>
                         </li>
                         <li class="header__navigation--item">
-                            <a href="year-2000.html" class="header__navigation--link header__navigation--yellow">2000-2010</a>
+                            <a href="year-2000.html" class="header__navigation--link header__navigation--yellow">2004-2010</a>
                         </li>
                         <li class="header__navigation--item">
                             <a href="year-2010.html"
@@ -73,12 +73,14 @@
         <div class="header__wrapper content-row">
             <a href="#" class="header__film ">
                 <div class="header__film--box">
-                    <img src="img/home/video.jpg" alt="video" class="content-image">
+                    <video class="header__film--inner" autoplay="autoplay" muted loop="loop" playsinline
+                           preload="auto"
+                           poster="img/home/video.jpg" src="https://logo-outsourcing.github.io/Hydro/video/saver.mp4">
+                    </video>
                     <div class="header__info">
                         <img src="img/home/play.png" alt="Play" class="header__play">
-                        <span class="header__subtitle">ВИДЕО</span>
-                        <p class="header__name"> Фильм: Федр Яковлев, 2013</p>
                     </div>
+                    <img src="img/home/poster5.png" class="header__poster">
                 </div>
             </a>
             <div class="header__film--open">
@@ -87,16 +89,13 @@
                 </div>
                 <a href="#" class="header__film--close"><img src="img/test/close-film.svg" alt="close"></a>
             </div>
-            <video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster2.png"
-                   class="header__video" src="https://logo-outsourcing.github.io/Hydro/video/video3.mp4">
-            </video>
         </div>
     </div>
     <div class="header__element">
         <div class="content-container">
             <video autoplay="autoplay" muted loop="loop" playsinline preload="auto" poster="img/home/poster.jpg"
                    class="header__video--mobile">
-                <source src="https://logo-outsourcing.github.io/RusHydro/video/video.mp4"
+                <source src="https://logo-outsourcing.github.io/Hydro/video/video.mp4"
                         type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
             </video>
             <h1 class="header__title wow slideInUp">История энергетики России</h1>
@@ -105,8 +104,6 @@
                     <img src="img/home/video.jpg" alt="video" class="header__image">
                     <div class="header__info">
                         <img src="img/home/play.png" alt="Play" class="header__play">
-                        <span class="header__subtitle">ВИДЕО</span>
-                        <p class="header__name"> Фильм: Федр Яковлев, 2013</p>
                     </div>
 
                 </a>
@@ -153,10 +150,10 @@
                         </li>
                         <li class="header__item">
                             <a href="year-1990.html" class="header__link header__link--active">1990<br>
-                                2000</a>
+                                2003</a>
                         </li>
                         <li class="header__item">
-                            <a href="year-2000.html" class="header__link">2000<br>
+                            <a href="year-2000.html" class="header__link">2004<br>
                                 2010</a>
                         </li>
                         <li class="header__item">
@@ -171,7 +168,7 @@
 </header>
 <section class="ninety">
     <div class="content-container">
-        <h2 class="main__title wow fadeInLeft">1990-2000</h2>
+        <h2 class="main__title wow fadeInLeft">1990-2003</h2>
         <div class="wow fadeInLeft">
             <p class="ninety__name">В декабре 1991 года после распада СССР начинается процесс разделения Единой
                 энергосистемы СССР по странам
